tests/dependancies/good/module2/mod.rs
pub mod module3;


pub fn exec() {
    module3::exec()
}