tests/dependancies/bad/private_module/main.rs
mod module;

fn main() {
    module::module2::exec()
}